[tool.poetry]
name = "new-docs"
version = "0.1.0"
description = ""
authors = ["Laurie Voss <github@seldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
mkdocs-jupyter = "^0.24.6"
mkdocs-include-dir-to-nav = "^1.2.0"
mkdocs-material = "^9.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
