[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython==8.10.0",
    "jupyter>=1.0.0,<2",
    "pytest==7.2.1",
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "diff-cover>=9.2.0",
    "pytest-cov>=6.1.1",
    "ruff==0.11.11",
]

[project]
name = "llama-index-packs-code-hierarchy"
version = "0.5.1"
description = "A node parser which can create a hierarchy of all code scopes in a directory."
authors = [{name = "Ryan Peach", email = "rgpeach10@gmail.com"}]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
maintainers = [{name = "ryanpeach"}]
keywords = [
    "c",
    "code",
    "cpp",
    "hierarchy",
    "html",
    "javascript",
    "python",
    "repo",
    "typescript",
]
dependencies = [
    "tree-sitter-language-pack",
    "tree-sitter",
    "llama-index-agent-openai>=0.4.0,<0.5",
    "llama-index-readers-file>=0.4.0,<0.5",
    "llama-index-core>=0.12.0,<0.13",
]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.packs.code_hierarchy"

[tool.llamahub.class_authors]
CodeHierarchyAgentPack = "ryanpeach"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.8"
