[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.llamahub]
contains_example = true
import_path = "llama_index.packs.docugami_kg_rag"

[tool.llamahub.class_authors]
DocugamiKgRagPack = "docugami"

[tool.poetry]
authors = [
    "Docugami <contact@docugami.com>",
]
description = "This template contains a reference architecture for Retrieval Augmented Generation against a set of documents using Docugami's XML Knowledge Graph (KG-RAG)."
exclude = ["**/BUILD"]
keywords = ["infer", "rag", "retrieve", "retriever"]
name = "llama-index-packs-docugami-kg-rag"
readme = "README.md"
version = "0.3.0"

[tool.poetry.dependencies]
python = "^3.9"
dgml-utils = "^0.3.2"
docugami = "^0.1.2"
lxml = "4.9.3"
openpyxl = "^3.1.2"
llama-index-embeddings-openai = "^0.3.0"
llama-index-llms-openai = "^0.3.0"
llama-index-vector-stores-chroma = "^0.4.0"
llama-index-readers-docugami = "^0.3.0"
pandas = "*"

[tool.poetry.group.dev.dependencies.black]
extras = ["jupyter"]
version = "<=23.9.1,>=23.7.0"

[tool.poetry.group.dev.dependencies.codespell]
extras = ["toml"]
version = ">=v2.2.6"

[[tool.poetry.packages]]
include = "llama_index/"
