[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-packs-gestell-sdk"
version = "0.1.0"
description = "llama-index packs gestell_sdk integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9, <4.0"
authors = [{name = "Chris Cates", email = "hello@chriscates.ca"}]
maintainers = [{name = "ChrisCates"}]
keywords = ["retrieval", "search", "reasoning", "sdk", "gestell"]
dependencies = ["gestell>=1.3.0", "llama-index-core>=0.12.35"]

[project.entry-points."llama_index.packs"]
gestell_sdk = "llama_index.packs.gestell_sdk.base:GestellSDKPack"

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.llamahub]
contains_example = true
import_path = "llama_index.packs.gestell_sdk"

[tool.llamahub.class_authors]
GestellSDKPack = "ChrisCates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
]
