[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.llamahub]
contains_example = false
import_path = "llama_index.packs.neo4j_query_engine"

[tool.llamahub.class_authors]
Neo4jQueryEnginePack = "wenqiglantz"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.8"

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "llama-index packs neo4j_query_engine integration"
exclude = ["**/BUILD"]
keywords = ["knowledge graph", "neo4j", "query engine"]
license = "MIT"
maintainers = ["wenqiglantz"]
name = "llama-index-packs-neo4j-query-engine"
readme = "README.md"
version = "0.4.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
neo4j = "^5.16.0"
llama-index-graph-stores-neo4j = "^0.4.0"
llama-index-llms-openai = "^0.3.0"
llama-index-core = "^0.12.0"

[tool.poetry.group.dev.dependencies]
ipython = "8.10.0"
jupyter = "^1.0.0"
mypy = "0.991"
pre-commit = "3.2.0"
pylint = "2.15.10"
pytest = "7.2.1"
pytest-mock = "3.11.1"
ruff = "0.0.292"
tree-sitter-languages = "^1.8.0"
types-Deprecated = ">=0.1.0"
types-PyYAML = "^6.0.12.12"
types-protobuf = "^4.24.0.4"
types-redis = "4.5.5.0"
types-requests = "2.28.11.8"
types-setuptools = "67.1.0.0"

[tool.poetry.group.dev.dependencies.black]
extras = ["jupyter"]
version = "<=23.9.1,>=23.7.0"

[tool.poetry.group.dev.dependencies.codespell]
extras = ["toml"]
version = ">=v2.2.6"

[[tool.poetry.packages]]
include = "llama_index/"
