[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.llamahub]
contains_example = false
import_path = "llama_index.agent.agentmesh"

[tool.llamahub.class_authors]
TrustedAgentWorker = "agentmesh"

[tool.poetry]
name = "llama-index-agent-agentmesh"
version = "0.1.0"
description = "AgentMesh trust layer integration for LlamaIndex agents"
authors = ["AgentMesh Contributors"]
readme = "README.md"
license = "MIT"
packages = [{ include = "llama_index" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
llama-index-core = ">=0.12.0"
cryptography = ">=41.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
