[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff==0.11.11",
]

[project]
name = "llama-index-agent-agentmesh"
version = "0.1.0"
description = "AgentMesh trust layer integration for LlamaIndex agents"
authors = [{name = "AgentMesh Contributors"}]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = ["llama-index-core>=0.13.0,<0.15.0", "cryptography>=41.0.0"]

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.agent.agentmesh"

[tool.llamahub.class_authors]
TrustedAgentWorker = "agentmesh"
