[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "ipython==8.10.0",
    "jupyter>=1.0.0,<2",
    "mypy==0.991",
    "pre-commit==3.2.0",
    "pylint==2.15.10",
    "pytest==7.2.1",
    "pytest-mock==3.11.1",
    "ruff==0.0.292",
    "tree-sitter-languages>=1.8.0,<2",
    "types-Deprecated>=0.1.0",
    "types-PyYAML>=6.0.12.12,<7",
    "types-protobuf>=4.24.0.4,<5",
    "types-redis==4.5.5.0",
    "types-requests==2.28.11.8",
    "types-setuptools==67.1.0.0",
]

[project]
name = "llama-index-embeddings-ipex-llm"
version = "0.3.0"
description = "llama-index embeddings ipex-llm integration"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "llama-index-core>=0.12.0,<0.13",
    "ipex-llm[llama-index]>=2.1.0b20240529",
]

[project.optional-dependencies]
xpu = [
    "bigdl-core-xe-21",
    "bigdl-core-xe-addons-21",
    "bigdl-core-xe-batch-21",
    "dpcpp-cpp-rt==2024.0.2 ; platform_system == 'Windows'",
    "intel_extension_for_pytorch==2.1.10+xpu",
    "mkl-dpcpp==2024.0.0 ; platform_system == 'Windows'",
    "onednn==2024.0.0 ; platform_system == 'Windows'",
    "torch==2.1.0a0",
    "torchvision==0.16.0a0",
]

[tool.codespell]
check-filenames = true
check-hidden = true
# Feel free to un-skip examples, and experimental, you will just need to
# work through many typos (--write-changes and --interactive will help)
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.embeddings.ipex_llm"

[tool.llamahub.class_authors]
IpexLLMEmbedding = "llama-index"

[tool.mypy]
disallow_untyped_defs = true
# Remove venv skip when integrated with pre-commit
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.11"

[[tool.uv.index]]
name = "ipex-xpu-src-us"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
explicit = true

[[tool.uv.index]]
name = "ipex-xpu-src-cn"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/cn/"
