[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython==8.10.0",
    "jupyter>=1.0.0,<2",
    "mypy==0.991",
    "pre-commit>=4.0.0,<5",
    "pylint==2.15.10",
    "pytest>=7.2.1",
    "pytest-asyncio<0.24.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14.0",
    "ruff==0.11.11",
    "types-Deprecated>=0.1.0",
    "types-PyYAML>=6.0.12.12,<7",
    "types-protobuf>=4.24.0.4,<5",
    "types-redis==4.5.5.0",
    "types-requests==2.28.11.8",
    "types-setuptools==67.1.0.0",
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "diff-cover>=9.2.0",
]

[project]
name = "llama-index-graph-rag-cognee"
version = "0.1.4"
description = "llama-index graph rag cognee integration"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "cognee[neo4j, postgres, qdrant, weaviate]",
    "httpx~=0.27.0",
    "llama-index-core>=0.12.5,<0.13",
]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.graph_rag.cognee"

[tool.llamahub.class_authors]
GraphRag = "llama-index"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.8"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
